Fix broken CSS

--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -32,7 +32,7 @@ header.homepage {
 
   .twitter-logo {
     vertical-align: top;
-    position: relative:
+    position: relative;
     top: -7px;
   }
 }
